# raksh_master

./: .env.example  .gitignore  README.md  REFERENCE_RANGES.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  setup.py
.github/workflows/: ci.yml
infra/nginx/: nginx.conf
services/ingestion/: Dockerfile  config.py  main.py  requirements.txt
services/ingestion/agents/: email_parser.py  fax_scanner_emr.py  folder_watch.py
services/ingestion/middleware/: auth.py  constitutional_filter.py
services/ingestion/models/: enums.py  schemas.py
services/ingestion/pipeline/: classifier.py  clinical_nlp.py  confidence.py  deidentify.py  dicom_parser.py  disease_protocols.py  extractor.py  phi_deid.py  preprocessing.py  unit_normaliser.py  validator.py
services/ingestion/routes/: health.py  ingest.py
services/ingestion/services/: abdm_pacs.py  audit.py  chunked_upload.py  consent.py  database.py  drug_formulary.py  fhir_mapper.py  lineage.py  loinc_mapping.py  orchestrator.py  patient_linking.py  rcm.py  reference_ranges.py  review_queue.py  storage.py  tenancy.py  uhi_summarization.py  whistle_engine.py
services/ingestion/tests/: test_agents.py  test_clinical_nlp.py  (+17 more)
supabase/: config.toml  seed.sql
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 0001_init_schema.sql  0002_reference_ranges.sql  0003_rls_policies.sql  0004_consent_and_erasure.sql  0005_lineage.sql  0006_audit_log.sql  0007_analytical_views.sql  0008_review_queue_and_loinc.sql  0009_trend_view.sql
ui/: app.js  index.html  style.css
