[project]
name = "raksh-ingestion"
version = "1.0.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["config", "models", "pipeline", "services", "agents", "routes", "middleware"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["services/ingestion/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
